# omnitea3

./: --verbose  Cargo.toml  Dockerfile  README.md  a.md  policy.xml
src/: main.rs  openai.rs  prompt.txt  prompt_omnitea4.txt  prompt_wc.txt
