[package]
name = "omnitea3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = "0.6.1"
serenity = { version="0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.93"
tiktoken-rs = "0.1.4"
log = "0.4.17"
chrono = "0.4.23"
regex = "1.7.1"
tempfile = "3.4.0"
